# api/route.go
@@ -67,6 +67,9 @@ func (s Server) registeRoute() {
 
 		content.PUT("/contents_bulk/publish", MustLogin, s.publishContentBulk)
 		content.DELETE("/contents_bulk", MustLogin, s.deleteContentBulk)
+
+		content.GET("/contents_resources/upload", MustLogin, s.GetUploadPath)
+		content.GET("/contents_resources", MustLogin, s.GetPath)
 	}
 	schedules := s.engine.Group("/v1")
 	{
