# model/uploader.go
@@ -1,0 +1,42 @@
+package model
+
+import (
+	"context"
+	"gitlab.badanamu.com.cn/calmisland/kidsloop2/model/storage"
+	"gitlab.badanamu.com.cn/calmisland/kidsloop2/utils"
+	"sync"
+)
+
+type IResourceUploaderModel interface{
+	GetResourceUploadPath(ctx context.Context, partition string, extension string) (string, string, error)
+	GetResourcePath(ctx context.Context, partition string, name string) (string, error)
+}
+
+type ResourceUploaderModel struct {
+
+}
+
+func (r *ResourceUploaderModel) GetResourceUploadPath(ctx context.Context, partition string, extension string) (string, string, error) {
+	fileName := utils.NewID() + "." + extension
+	path, err := storage.DefaultStorage().GetUploadFileTempPath(ctx, partition, fileName)
+	if err != nil{
+		return "", "", err
+	}
+	return fileName, path, nil
+}
+
+func (r *ResourceUploaderModel) GetResourcePath(ctx context.Context, partition string, name string) (string, error) {
+	return storage.DefaultStorage().GetFileTempPath(ctx, partition, name)
+}
+var (
+	_uploaderModel     IResourceUploaderModel
+	_uploaderModelOnce sync.Once
+)
+
+func GetResourceUploaderModel() IResourceUploaderModel {
+	_uploaderModelOnce.Do(func() {
+		_uploaderModel = new(ResourceUploaderModel)
+	})
+	return _uploaderModel
+}
+
